# serializer version: 1
# name: test_inner_join_rewriting[session-tracked-join-rewrite-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   WHERE sql_data_types_container__data_types.int_col > $1::INTEGER
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-join-rewrite-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   WHERE sql_data_types_container__data_types.int_col > %(int_col_1)s::INTEGER
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-join-rewrite-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   WHERE sql_data_types_container__data_types.int_col > %(int_col_1)s::INTEGER
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-no-join-rewrite-async-asyncpg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   WHERE sql_data_types_container.created_at > $1::TIMESTAMP WITH TIME
    ZONE
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-no-join-rewrite-async-psycopg_async_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   WHERE sql_data_types_container.created_at > %(created_at_1)s::TIMESTAMP WITH TIME
    ZONE
  '''
# ---
# name: test_inner_join_rewriting[session-tracked-no-join-rewrite-sync-psycopg_engine]
  '''
  SELECT sql_data_types_container__data_types.int_col,
         sql_data_types_container__data_types.id,
         sql_data_types_container.id AS id_1
    FROM sql_data_types_container AS sql_data_types_container
    LEFT OUTER JOIN sql_data_types AS sql_data_types_container__data_types
      ON sql_data_types_container.id = sql_data_types_container__data_types.container_id
   WHERE sql_data_types_container.created_at > %(created_at_1)s::TIMESTAMP WITH TIME
    ZONE
  '''
# ---
